--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
             <td>Sixth Sense</td>
             <td>⭐⭐⭐⭐</td>
 
-            <td>Steath</td>
+            <td>Stealth</td>
             <td>⭐⭐⭐⭐</td>
           </tr>
         </tbody>
       </table>
-
+      
+      <hr>
 
         <body>
           <h3>Stuff I like</h3>
